# articuno

./: .gitignore  README.md  pyproject.toml
articuno/: __init__.py  convert.py  inference.py  pandas_infer.py  polars_infer.py
docs/: __init__.py  api_reference.rst  conf.py  index.rst  usage.rst
docs/_build/doctrees/: api.doctree  api_reference.doctree  environment.pickle  index.doctree  usage.doctree
docs/_build/html/: .buildinfo  api.html  api_reference.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/articuno/: bootstrap.html  cli.html  codegen.html  convert.html
docs/_build/html/_sources/: api.rst.txt  index.rst.txt  usage.rst.txt
tests/: articuno_inference_demo.ipynb  articuno_pandas_pyarrow_example.ipynb  optional_nested_example.ipynb  pandas_nested.ipynb  polars_inference.ipynb  polars_nested.ipynb
