[project]
name = "articuno"
version = "0.1.0"
description = "Convert Polars DataFrames to lists of Pydantic models with schema inference"
authors = [{ name="Odos Matthews", email="odosmatthews@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "polars>=0.19.0",
    "pydantic>=2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0"
]

[project.urls]
Homepage = "https://github.com/eddiethedean/articuno"
